# bs-song-manager

./: Cargo.toml
src/: lib.rs  main.rs
ui/: appwindow.slint
