[package]
name = "bs-song-manager"
version = "0.1.0"
authors = ["KagurazakaNyaa <dev@kagurazakanyaa.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0.0"
log = "0.4"
rfd = "0.11.2"
rodio = { version = "0.17.1", default-features = false, features = ["vorbis"] }
sha-1 = "0.10.0"
hex = "0.4.3"
deunicode = "1.3.2"
regex = "1.7.0"
native-tls = "0.2.11"
serde_json = "1.0"

[build-dependencies]
slint-build = "1.0.0"
